# chess

./: .gitignore  README.md  main.py  pyproject.toml  rsrc_rc.py
chess/UI/: PawnPromoOpts.py  PawnPromoOpts.ui  custom_game_1.ui  gamemode_menu.py  ingame_chess.py  mainwindow.py  options_menu.ui  rsrc.qrc
chess/src/: game_state.py  pieces.py  ui_mapper.py
chess/src/windows/: in_game_window.py  main_window.py
chessVshogi/: __init__.py  directions.py  layouts.py  main.py  pieces.py  rsrc_rc.py
chessVshogi/UI/: PawnPromoOpts.py  PawnPromoOpts_black.py  PawnPromoOpts_black.ui  PawnPromoOpts_white.py  PawnPromoOpts_white.ui  Shogi_Promo.py  Shogi_Promo.ui  convert_to_py.py  convert_to_py.sh  custom_game_1.py  custom_game_1.ui  form.py  form.ui  form2.py  form2.ui  gamemode_menu.py  gamemode_menu.ui  ingame_chess.backup  ingame_chess.py  ingame_chess.ui  ingame_screen.py  ingame_screen.ui  ingame_shogi.py  ingame_shogi.ui  ingame_ui.py  mainwindow.py  mainwindow.ui  options_menu.py  options_menu.ui  rsrc.qrc  rsrc_rc.py  ui_mapper.py
chessVshogi/UI/resources/Ichiji/: resize.py
chessVshogi/src/: cell.py  game_state.py  layouts.py  pieces.py  ui_mapper.py
chessVshogi/src/windows/: game_mode_window.py  in_game_window.py  main_window.py  options_menu_window.py  versus_opts_window.py
tests/: test_directions.py
