[tool.poetry]
name = "chessvshogi"
version = "0.1.0"
description = "Chess vs Shogi"
authors = ["Asocia <akkayas17@itu.edu.tr>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/ChessVShogi/chessVshogi"
repository = "https://github.com/ChessVShogi/chessVshogi"


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
